cluster/workload/devdrill-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devdrill-api
  namespace: devdrill-prod
  labels:
    app: devdrill
    tier: api
    env: prod
spec:
  selector:
    matchLabels:
      app: devdrill
      tier: api
      env: prod
  template:
    metadata:
      labels:
        app: devdrill
        tier: api
        env: prod
    spec:
      nodeSelector:
        dedicated: devdrill
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "devdrill"
      topologySpreadConstraints:
        - maxSkew: 1
          whenUnsatisfiable: ScheduleAnyway
          topologyKey: "kubernetes.io/hostname"
          labelSelector:
            matchLabels:
              app: devdrill
              tier: api
              env: prod
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      imagePullSecrets:
        - name: harbor-auth
      containers:
        - name: devdrill-api
          image: docker.hyeonwoo.com/devdrill/devdrill-api:sha-7c87e3d
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: api-data
              mountPath: /app/data
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5 # 앱이 뜨는 시간을 고려해 5초 후부터 검사. api bootstrap 시간이 2초인걸 고려해서 여유있게 3초로 설정해보았으나 최초 검사가 통과하지 못하는걸 확인함. 조금 더 여유롭게 5초로 설정.
            periodSeconds: 5 # 5초마다 반복 검사
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15 # Liveness는 좀 더 여유 있게 시작
            periodSeconds: 20
      volumes:
        - name: api-data
          persistentVolumeClaim:
            claimName: devdrill-pvc
